Enum LoaiNV {
    ADMIN
    STAFF
}

Enum TrangThaiHD {
    PENDING
    PAID
    CANCELLED
}

Enum TrangThaiSP {
    ACTIVE
    INACTIVE
}

Table LoaiSP {
    ma varchar [pk]
    ten nvarchar [not null]
    moTa nvarchar
}

Table SanPham {
    ma varchar [pk]
    ten nvarchar [not null]
    moTa nvarchar
    anh nvarchar
    gia decimal(18,2) [not null]
    soLuong int [not null, default: 0]
    maLoai varchar [ref: > LoaiSP.ma]
    trangThai TrangThaiSP [default: 'ACTIVE']
}

Table NhanVien {
    ma varchar [pk]
    ten nvarchar [not null]
    sdt varchar [unique, not null] 
    matKhau varchar [not null]
    loai LoaiNV [not null]
}

Table KhachHang {
    sdt varchar [pk]
    ten nvarchar [not null]
    diem int [default: 0]
}

Table HoaDon {
    ma varchar [pk]
    maNV varchar [ref: > NhanVien.ma]
    sdtKH varchar [ref: > KhachHang.sdt]
    ngayLap datetime [default: `now()`]
    tongTien decimal(18,2)
    vat decimal(18,2)
    trangThai TrangThaiHD [default: 'PAID']
}

Table ChiTietHD {
    maHD varchar [ref: > HoaDon.ma]
    maSP varchar [ref: > SanPham.ma]
    soLuong int [not null]
    donGia decimal(18,2) [not null] 
    thanhTien decimal(18,2) [not null] 

    indexes {
        (maHD, maSP) [pk]
    }
}
